# wizzMania

./: .gitignore  FIX_SUMMARY.md  PLAN.md  README.md  demo.sh
tests/: CMakeLists.txt  README.md  run_tests.sh  test_clients.cpp  test_server.cpp
wizzMania/: CMakeLists.txt  README.md
wizzMania/src/: main.cpp
wizzMania/src/client/: ClientManager.cpp  ClientManager.h
wizzMania/src/common/: NetworkManager.cpp  NetworkManager.h  Protocol.h
wizzMania/src/gui/: ChatController.cpp  ChatController.h  mainwindow.cpp  mainwindow.h
wizzMania/src/server/: ServerManager.cpp  ServerManager.h
